# ROS2023-Lecture

HW1/: ReadMe.md  pub_web_cam.py  test1.py
HW1/darknet_ros/config/: ros.yaml
HW1/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
HW1/darknet_ros/src/: YoloObjectDetector.cpp
HW1/srw/: package-lock.json
HW1/srw/src/: App.js
HW1/srw/src/components/Footer/: Footer.js
HW1/srw/src/components/RosSub/: RosSubViz.js
HW1/srw/src/pages/visualize/: Visualization.js
carla_monitoring/: ReadMe.md  carla_monitoring.py  main.py
carla_monitoring/srw/src/pages/visualize/: SetViz.js  VizStyles.js
ros_with_yolov3/: save_web_cam.py
ros_with_yolov3/srw/: package.json
ros_with_yolov3/srw/src/pages/visualize/: SetViz.js  VizStyles.js
visitor_check/: CMakeLists.txt  ReadMe.md  package.xml
visitor_check/msg/: Visitor.msg
visitor_check/src/: record.py  registration.py
